Fixed wrapping on hero

--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,17 @@
     align-content: center;
 }
 
+.heroTitle {
+    width: 100vw;
+}
+
 .btn-light {
     border: 2px solid black;
     border-radius: 0px;
+}
+
+.heroCTA {
+    width: 100vw;
 }
 
 .hero .btn-light {
@@ -71,6 +79,7 @@
 .scrollingWelcome {
     margin: 60px 0px;
     width: 100%;
+    white-space: nowrap;
     transform: translateX(100%);
     animation: move 20s linear infinite;
 }
@@ -85,7 +94,17 @@
     margin: 1.5rem;
 }
 
-/* Typography */
+/* Typography */ 
+.heading1 {
+    font-family: 'Bungee', sans-serif;
+    font-size: 105px;
+}
+
+.heading2 {
+    font-family: 'Bungee', sans-serif;
+    font-size: 46px;
+
+}
 .heading3 {
     font-family: 'Rubik', sans-serif;
     font-size: 50px;
@@ -96,4 +115,5 @@
 .heading3pre {
     font-family: 'Space Mono', monospace;
     font-size: 26px;
+    color: #62586C;
 }
